Fix z-index of header vs panels (#66)

--- a/interlecture/static/css/interlecture/base.css
+++ b/interlecture/static/css/interlecture/base.css
@@ -21,6 +21,7 @@
     box-shadow: 0 0 15px 1px var(--dark-gray);
     border: none;
     border-radius: 0;
+    z-index: 10;
 }
 
 .panel-body {
